test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_abstract_array_declarator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  (
  int
  [
  const int(3)
  ]
  *
  )
  const int(0)
  ;
  }
